<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/new_order"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="false"
             android:paddingLeft="16dp"
             android:paddingRight="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_title_text"
            android:inputType="textPostalAddress"
            />


        <EditText
            android:id="@+id/subtitle_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle_text"
            android:inputType="textPostalAddress"/>

        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number_text"
            android:inputType="phone"/>


        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_text"
            android:inputType="textPostalAddress"/>


        <EditText
            android:id="@+id/cost_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/cost_text"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/time_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/order_length"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="72dp"
        app:srcCompat="@drawable/ic_add_48px"
        app:fabSize="normal"/>
</FrameLayout>
