<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    card_view:cardBackgroundColor="@color/background"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:src="@color/cardview_dark_background" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="20"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:maxLines="1"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginBottom="7dp"
                android:gravity="bottom"
                android:maxLength="27"
                android:maxLines="1"
                android:text="@string/subtitle"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userStatusBusy"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/errorColor"
                android:gravity="bottom"
                android:text="@string/user_status_busy"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/userStatusFree"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:gravity="bottom"
                android:text="@string/user_status_free"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
