<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:text="@string/order_status"
                        android:textAlignment="viewStart"
                        android:textColor="@color/accent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center"
                        android:text="0 Руб."
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:text="@string/order_description"
                        android:textColor="@color/accent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center"
                        android:text="0 Руб."
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="24sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:text="@string/order_cost"
                        android:textColor="@color/accent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cost_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center"
                        android:text="0 Руб."
                        android:textColor="@color/primary_text"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="174dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/show_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/accent"
                    android:lineSpacingExtra="24sp"
                    android:text="@string/show_phone_number"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/personal_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingExtra="24sp"

                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/addres"
                        android:textColor="@color/accent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/address_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:text="asd asda @android:string/defaultMsisdnAlphaTag"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/accent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/phone_number_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:ems="10"
                        android:gravity="left"
                        android:text="8 000 000"
                        android:textSize="20sp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:layout_weight="9"
                    android:text="@string/details_label"
                    android:textColor="@color/accent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/subtitle_tv"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"

                    android:layout_weight="1"
                    android:fontFamily="@font/avant_garde"
                    android:gravity="center"
                    android:text="Детали"
                    android:textAlignment="viewStart"
                    android:textColor="?android:attr/textColorPrimary" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:src="@color/cardview_dark_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="Заказчик:"
                        android:textColor="@color/accent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/creatorName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="left|center"
                        android:text="Имя Заказчика"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/takeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:text="@string/take_order"
        android:textColor="@color/white"
        android:visibility="visible" />

    <Button
        android:id="@+id/showResponses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:text="@string/see_order_responses"
        android:textColor="@color/white" />

</LinearLayout>